[package]
name = "mb2-tft-display"
version = "0.1.0"
edition = "2024"



[dependencies]
cortex-m-rt = "0.7"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
gc9a01-rs = "0.4.2"
microbit-v2 = "0.16.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[profile.release]
debug = true

